--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,14 +7,57 @@
     android:background="#FF8A80"
     tools:context="com.rezn.college.HomeActivity">
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView4"
+        android:layout_marginTop="22dp"
+        android:src="@drawable/avatar" />
+
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="25dp"
+        android:background="#f8bbd0"
+        android:gravity="center"
+        android:text="Step 1: Make An Impression Of The Scene"
+        android:textAllCaps="false"
+        android:textColor="#d50000"
+        android:textSize="19sp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/button5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="186dp"
-        android:text="Activity 1"
-        android:textColor="#ffffff"
-        android:textSize="40sp" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="39dp"
+        android:layout_marginEnd="13dp"
+        android:layout_marginRight="13dp"
+        android:text="Next"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:background="#ffffff"
+        android:textColor="#000000"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="150dp"
+        android:text="@string/home_activity"
+        android:textSize="18sp"
+        android:textStyle="bold|italic" />
+
 </RelativeLayout>
